--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ $RECYCLE.BIN/
 /PluginModules/WeatherPluginModule/obj
 /EffectModules/LightraysEffect/Properties
 /EffectModules/RippleEffect/Properties
+/other
