--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ $RECYCLE.BIN/
 /EffectModules/LightraysEffect/Properties
 /EffectModules/RippleEffect/Properties
 /other
+/PluginModules/ImagePluginModule/obj
