--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 bin/Clien/runtimes/win-x64/native/libcef.dll filter=lfs diff=lfs merge=lfs -text
 bin/Clien/runtimes/win-x86/native/libcef.dll filter=lfs diff=lfs merge=lfs -text
+bin/Clien/runtimes/win-arm64/native/libcef.dll filter=lfs diff=lfs merge=lfs -text
