--- a/PluginModules/VirtualCatPlugin/VirtualCatPlugin.csproj
+++ b/PluginModules/VirtualCatPlugin/VirtualCatPlugin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -44,7 +44,6 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\config.json" />
-	  <None Remove="Resources\html\index.html" />
 	  <None Remove="Resources\LumAlpha.ps" />
 	</ItemGroup>
 
