3D动态地球插件

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ $RECYCLE.BIN/
 /EffectModules/AurorasEffect/obj
 /EffectModules/HeavenEffect/Properties/launchSettings.json
 /EffectModules/HeavenEffect/obj
+/PluginModules/Earth3DPlugin/obj
