视频特效示例分享

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ $RECYCLE.BIN/
 /EffectModules/HeavenEffect/Properties/launchSettings.json
 /EffectModules/HeavenEffect/obj
 /PluginModules/Earth3DPlugin/obj
+/EffectModules/BatEffect/obj
