--- a/PluginModules/VirtualLuMiPlugin/VirtualLuMiPlugin.csproj
+++ b/PluginModules/VirtualLuMiPlugin/VirtualLuMiPlugin.csproj
@@ -77,6 +77,7 @@
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="copy  &quot;$(TargetPath)&quot;  &quot;$(OutDir)DefaultPlugin.dll&quot;" />
+		<Exec Command="Xcopy /E/H/C/I /s /y &quot;$(TargetDir)Resources&quot;  &quot;$(SolutionDir)EffectModules\bin\Debug\netcoreapp3.1\Resources&quot;" />
 	</Target>
 
 	<Import Project="..\..\CefTools\CefTools.projitems" Label="Shared" />
